feat: docs & small fixes
